Adding port to gateway.properties
